--- a/Tyuiu.MedvedevKA.Sprint7.Project.V6/FormDoctors.resx
+++ b/Tyuiu.MedvedevKA.Sprint7.Project.V6/FormDoctors.resx
@@ -118,59 +118,61 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="buttonFiltre_MKA.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="buttonOpenFile_MKA.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAZdEVYdFNvZnR3YXJlAEFkb2JlIEltYWdlUmVhZHlxyWU8AAACUElEQVRYR8WVTWsTURiFWxSX
-        FoS69g90ERDSlQr+gnygxCYzySQlH5NY05qaahWSkBLaJra1SrRZ1R9QAq4q1g+6deEvOt4zmdFRXrOQ
-        6/WFh7mc95ybdybzMQPgvyKKJhFFk4iiSUTRJKJoElE0iSiaRBTD/FazS0v3Fm3b/pjNZhGGGnv0TKw/
-        S9o3QBTDhOqCbVtHrlvFaDTC6el7fPr8xYNrauzRQ+8kMilp3wBRDOPXRbXxuL66irMPZ3j9ZoSKW8Od
-        uykPrqmxR4/yjlTmxxDSvgGiGEbVbCwWu1mrVb0zbaxvwLJzyDkFOPllD66psUcPvfF4/AazOga4lMlk
-        zo+P36LV7qKwXESxVEG5Uv0FauzRQ69lWefM6hhgLpfL4eRk7P1QtbaC+yt1EfbooZcZZnUMMO84Dg5f
-        DfGgvoa1hw3F+h9oeB56mWFWxwBX8/k8tnf6eNR8gubG5lTooZcZZrUMUCjk8fRZS9H2j9OYeJjRNcB8
-        Op3+2ny8iU63h1Znayr00MsMszoGmItGo5lSqYje9q6ij63ejgh79NDLDLM6BuCjdC2ZTI5d18Xg+QEG
-        ey/QV8fdwb4H19TYo4deZvysuG+AKIZRxZfJZcVCIpF4VyqV0e50cXA4xMvhkQfX1Nijh14/o+VFxOJr
-        9YpiIRKJlFOp1Dc+Zo561j3Umhp79Pheba/ioLghz4qX9rriluK2D9fU2KNH+8coKF5S/q+8uXiH8zEj
-        XFNj7599jv+6pH0DRNEkomgSUTSJKJpEFE0iiiYRRXNg5jvjQysh+E/y/QAAAABJRU5ErkJggg==
+        YQUAAAAZdEVYdFNvZnR3YXJlAEFkb2JlIEltYWdlUmVhZHlxyWU8AAAFVElEQVRYR8WXe2yTVRjGi5eA
+        RPBCaGKMaKKJJmKMlwkKCohEQwwo+i9yC8hlY2MbG2wDBBQSNm9sgNc/jLqAjnEXpIwQHSJDt25jl3Yt
+        3YDd2KWwla33x+c9X+m60XWdLPomv7Q953zneb7zPee01QH4X5G64++caYeNOS+jZPsk8lIYJkH6Oe6Q
+        jFdXDWGNksnhrQGcVUB39c04CfuN2ZPF8ijtsqGrsXKHIu4qmQtnyXyyoA/vAe0n8FfW8yj+/MUwKxSZ
+        wOodplbY1dMrA13lcJYugrNsKZzly3ooI6VL4GvczdUw0+ggcZkA3wVlglphV08zcL2Egu/DeT6WxPVh
+        BftorGzJIFkMV9lCGq/gSkwSA2M1yd4VMHAWrvPL4KpYSeLDIO1CXADtszsicWQZ5z5DAyo/ek2yd9HA
+        ZKCzEK7KWLiqEsiqAXGbEuExJ8FrSY5AEnyWBM5dgJJs9QgiGTgFdzVdVyeSpIh4zMnwWVNg/fltnMua
+        SF4IT6YQw/DGoPiziQywhDK4pYOh1Ax0FMBt5p1xcnfNanhqUm7GksK7SoXPthYX8ubAmjuTIWPQuisZ
+        4or+YQZ6OM8tbeoVShrgOXDtGIWTKZIKry0NvlpSJ6T3wn8xg+Lvwrp7NjwVyxmyxXAauXuMC6NgPm9k
+        Azxtf+LU1glF1B4TYuAIvNZU+GtFYA6KMicElrAvE2HdMxve6gS4KxlO7hKNWLgHwMUt7m/8Ds1F2chZ
+        Pj6d2veGGDig7th+ZinMP7wOOP7gY/mdFIZwmpyBR8QljJUabuJjG0zxZGV4mC9/1QrqFKBm7xI889g9
+        T1N7hDJQLAau5gOX1+PC3nfQUpgEv/0EA0fnKpjxGhRwmyhuYhhNzArxEFgS4WI4B8Jj2wq0HcW57dOa
+        qfsgua3HQMdPQMNGGHdOgdO2Sy2V28wdwUC6GcDepAbxMpioS8QT2w5Dl3ISumQDOd6b1dJmwONZJ9B0
+        ehO+T3wqi7r3i7gUH8Er3IZ70FWVgoqvX+W5vx+ei5nwWNeQtIj4uSNwOYkCJ/ntGrnyKu14c1MW3oq5
+        bzJ1R2ryNwxcz0WDYR7qDTy57PvgrV3H3ZBB5LV/UJfBlVsNXaJBiRysbsShAAeIlC42D+1dbvVeTOhW
+        7c+n7nBNXgxkT+F+zUXFtzPQbfkEaP4G3roNZOOA4NIHHJ/GSY8rAYPlCgqsGgZLs2rTJeSj1t6Fpk6n
+        +nzU3IrRaQeDvy30xpyp8LfuROnOqQxjLvwNn8J3aTP5cEBQvxloWRc08FtdKwovtinkvZRu1T5UXulQ
+        JuyBlbh73ZGeg8i4Yxo6yjNQe3Ael/9H+Bq2wFe/NSrQuIXJ3kiRX9XERZfbca7erjh7qV21zfzyNPvz
+        oYsnfBxSIzOUAfXtqC/dNR22Q3NpYhMNfAVc2UYyo6OFY699FDRQ1nRNUU6MDVdVW7i6K527htrKQNkX
+        r/Hbijnw8EeHgwY6d0SPI4ffBx8HQ2hudQQxkaqWTlQrHAppkxoRaqBk14wOMSFZKOaOGAylPENsOc+p
+        M0BKnrONyOuN90HatTapEWk9BuQ8fnbFrEfjFr3xSOxgWTBj3PJZMWMW6dacUhM3OZxoZNr7Q/qlQg3c
+        SeRUeog8/C8YR8br1haoie3dHrQx6f0h/VKhBqSGkduJmBksspcfGJZ2TE3c7fXB4fb2i/RLDe9j4FZL
+        Pzz9iJo42grdBUNR+tHrfwlMHV3JeLlOu/zWa6w+NbdQJpU7k+XtD+mXcTJertMuv/WSI/VJMoVMjwIZ
+        J+OH7G+eBFEmkzuSZR0IGSfjw/5V+w9Lp/sHFeEKNGAsudEAAAAASUVORK5CYII=
 </value>
   </data>
-  <metadata name="toolTip_MKA.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>182, 17</value>
-  </metadata>
-  <data name="buttonFunction_MKA.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="buttonSaveFile_MKA.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
-        dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAbYSURBVFhHvVdJj1xXFa5FIrJJHEJsAlngGASRiJQ4
-        QjYS8YKw4RfkB6BsWAAbxIIhkIhECgoLGnDciFjEPThJe4LYhm7HbXfcXV1TV3V1zdOr8VVV19Q1vJqH
-        L9+5TirddG2MTB/p0733q/Pu+e559553y0R7YH5+/ur58+fB9kDwaayrElsEPCxEu9OB0Wz+n2GoVmJJ
-        TIktAg6LKqPZgi8Qgj8YQiAUZiu4O5b+/eBkfl8gqGJJTIktAo7IoGG0EAxHEI7GsHz7tmpDkajC/eQk
-        hsT6VMCRXQKayimqxXF75WPVyjgc0xCNJ3D7zhqiiSTCwgv3336Tnp3AiQiJNVFAVNOgJRJYWb2j2lg8
-        jlgqhfh2AR9vuhEvV6DltxWnJZN7/Yh4MoU7a2Ykkukxv3s+mV8wUUCz1eKkKSRSaaya11UbT2WQKJRg
-        /+nLWP76F4lHYfvJy4pLZPSxnyCVyiKXrWLDFkQh10RWrygumc58Ph/n15hFiTVRwJ3VNazReX3dAjPb
-        NYsV5i0flr/xGLCxRCyqvnBmi23sZzZb4LB68LO/n8R3fmtSkL5w6+vWsd8qsyMx9guYm+PObCPFVaX1
-        LNatNqSzOaS3i8i0ulj+1mHAeUNB+nq7hwyzoPz0HDLZbVSKXRU4M1xTkL5weq4wnk/mTxISS2KOBcxx
-        IKrSaR0ZCrDwAZ3vXd+pw//eDG4xqAQW3Hr6CAIfzCJXM2BxOKFn80x9CY0ScOJ3JuijdYUTFNAoA/l8
-        mfPZKWSbIvJqgc12CxJzv4BsFno+D+vGBnKNBgLz/8DKt7+ChMcNG3dvvjdAaGEOt556BKH3Z2H3+ZEv
-        7aBSauHS2hS++6oJJylCgf3L5ilUKx04nG4KriPyn+vQy2U0WYjmdr8CEdBudZDjqrdLFTj8QYS5ypVn
-        voq024VCowm7y41CpYqC0b7727FDsL19Go02cMEyhVOvm+CPOxHy6OjUAb+2obiL1j/DF9IR++A8lp98
-        CLGlf6Pd7U8QQFU2lwsOVi/rmSncOvowrOfOUkwAjs1NOPib3emEXfr0sZ85DeuxJzD9p5fwwh9MWDJ/
-        CK8njE23Fy6XB56tsOLkt+mpl2A59mXYTv9FZa3d6+0X0On3UeLmiC7Mq+CRC/MoMStFrrrE87/hdKHE
-        7BSJSrWJVg/4mwR/w4T1ubdgcFypNeFkpkqVHZSrDRhdqN/EZ/6dH6FJn3LVQKdLAXv2ANW0ByNoVxZw
-        88kvwMYMlNtdpnwHhWKJQct3BVBIuVyDURvgsv2v+N6bJljm/4jVr30J2sJ7qHQHcHp9KNUbfL6nuLWj
-        j2Px7Vdw6i2+DtsU6tUuuvTbK0AyMBiwgPCorNyEm/W6Uq9zJWUGLaNcqTC1btS4qlZjiCt8r/J+l+3X
-        0R4C8YvvY5lZ065cgCeTRQ1A7PKC4hKXFhCK5+BPOXHyNROuOabR74/2C+jxFexQeZUfii2vHzvctZWd
-        mkK11oDXG0SvBfyLK3/uNyaE026EggnUm10wIYj/8yKWnz6MmzyqAjmywlEvvIEIWs0BND2AXDGLwWC4
-        X0CfGdja2mIgL3xMo9fjUWPPlgd+XxDxcAbnln6P46+Y8O7ia4iFkgiQF38vP7F+FqSb33x8XLCkL5yX
-        G9bn86k51bxbXsaaIGBAAfKRaDY7fCCg+nXWAoPHbsjNc27pdTzP4Fc3zmDQgfLzcuKGYTALvGww7Tee
-        OgQ4FhWkL1yD9cVDkeJXY4YFA2Z7r4DZOYyYqh7PtCX8IbRQGp3WAG1u2xF38vWNabXya65pDCW4wdsT
-        BXq5IoM1ok4Y3MTun/8YN44+orDJvnBy+Rj7MXi9bqjFzs7O7hUgZg1fwzO/NGHuozfVWGzRdVYFn7nx
-        BsB33eK3QWWKK/P5/aptyFWLdYRbBAHWeq4DzREUt8ePWRDfwXC4V4AMlDHAkvusKqNSy08wsJTVjzzv
-        IhMvot8bod3uqKrZ6XQR5PuVVsbCd1jhQuEour0+Cxt54Xb5tVptxYlNFBCNJlDIGCq4PuRHhZB+UW8h
-        rqURjkQQDIUUQuGwGkt7r5zYRAGDPjcC7fivTUgPVpEipC+mxeI8v330ul0F6Uc48b1wXeFYhsUmCpDj
-        IfaLmVN47lcmPMv98OqlHyouxnugHNUuJxBIPxKN3jtHIWKTMyACuHmyqaIa7zaNAobcPLISgfRjsdg9
-        c3ICxCYKGI0YnRbnLXhsdylovEyKyUQCsf+F+yzGRAFJ3nR3I8GbrOB+c2J7BMgF8aBt96X08MzMTFoI
-        UXUQkFj8b9j4TMAh4lni+8QPDggvEseJRwnTg4SIkD+KouigwOCmBz8BFngR869cZ4gAAAAASUVORK5C
-        YII=
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAZdEVYdFNvZnR3YXJlAEFkb2JlIEltYWdlUmVhZHlxyWU8AAAFAUlEQVRYR62XW0ybZRjHm2xE
+        Nxybc+A8XBrvvNA7vVFZTDTxzgu9NN6bmbiD22QTJKJZMBrioiYmmqEOxrpSetgy4tzRjcGYMgctAm3p
+        uaW0pf04lO7v8397cIPSfh0+yS/v1/d93uf59/lOz2cAYBDbuLPZaqk7bMOmQ1bBUjWPNFmxvanPxFgM
+        qNvyArYw+XqtfzyC2v1Go8TbwKC6TPZxqOc/p/WOBmAW+saCFaGfSaAZ3u9Ro20sjE37jD0SU58I7hVr
+        YBlpFkcAdkcQdmeoMuJHf5phtxHO6Jw6toyGsOmgxS9xaxi8rHGvWFHA2fEQzk2E0a8D+tGfZvjAiHBq
+        ETf9cfU7J6LPJ7HLi+BesaKA/n/C+G0ygvM6oB/9aRSQyWYxNathKC/CLqej9lAFEdwr1vBwXsD5qQgu
+        uKK4qAP6UQjNsPuUGimClXBGU+o3L8ztR2xhyVFahPhwKAq4JEEvu2dwRQf0uzgVVfve7R5W1wEroeBx
+        /sLkLSo5tjHRKpN1DkUBVz0z+GM6hms6ob97Nq32rmU8vczBRKtM1jkUBVyXoAPeWdzQCX2555onJ4jH
+        xd8CjbGZg4lWmaxzKAoY9MXVRcSruRq4514GfbMKWlUCbgUTij/XSSEOrSoBI6Gk4vY6KcShVSVgNDKH
+        OwJHvYyVoLBGq0oA71+HwLES48JELA2XPHzccQ2ee3Dn52ibP1a3YQUBB3MCJmIMWplJwZNIKxH/qwCX
+        3NN6YJJoegFv/zIIw14TDPuEPQV6/2OvGTUHLKgVEVsPW7Gj2Y6nWs84JWfuybhSgDehYVoH/rl5pJYy
+        MHx4GleDWVzwZdT+cnbJv4wheXBShOTcysSrBASS8/DrIJRawOLysvzL0xgOL8HQOoZ4MoFukxldvRZ0
+        m60KdSxzXKPPSDTDdwOT1jPxKgGR9KK8TBYQlvKWI6YtIYu7SsBF7yI2tzsRjcXhkZ7APSOnKI86ljmu
+        0eeKf6kgIHdNrBSQWMggLnAsR2ppWfnz/NsmNTR0TCAUiaPzpBnHeyzozKOOZY5r9Dnrmsdjn5QSkL8N
+        T/3tw+k7/oqYxwLqVbxhfy9OOtJ45jsX/IEoxr0zcHhj98E5rtHH6NSwo5SAQkNiGvVLvxeQVovt1trY
+        nUHpCSLYKAJ+up3CCz+6cfxGAG53GBOu++Ec1+jTeSclF2EZAWxKLdJwWiVJOezSil1yR1HzUS++/yuJ
+        V0948fKvXrz08zReXAHnuEafH0bmUF9OgKpAXkQ5bPkKUEDHcBJv9vjwxkkvXuvyYleeRknYeGJazXGN
+        PsdurSkg15bz/JoEVqIcfVKF36V92ygC2geSeMsUQNfNoETIqjjKpD3Dsjwfshl0DQWUz1eDawh40A+T
+        hw6Y0XY9gXf6QvD4o5jwJ7DnUAv2NbXCIb3FbanSqFwHHl9E+XwxkEBDKQFPNFuT6tNMHpk8HZXg871O
+        er1thy34bGAO752NIhSdRUDeAc1t7Wj5/Et4Yxomg7OYCsQQjMSUT5v4lhLAhvF5oVHYVQWvP95ix9FB
+        DfsvJ3F3UcOylPybjq/x7bEOZDIZaJompJFdSCufo0Madsoe2XufAL4YKIKT1fDskwe7RxiQDxdWsO7I
+        GTza0o9tLeewRY5rm2wKrtGHvk9/apvL7y8KeFCrE54TXhFKVagUrDKrnWvT1ymAn+IUwRfLyuqUg8ml
+        6gbDv9IZ7TAXbGtIAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="buttonDelete_MKA.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -204,67 +206,65 @@
         VtDGAAAAAElFTkSuQmCC
 </value>
   </data>
-  <data name="buttonSaveFile_MKA.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="buttonFunction_MKA.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
-        dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAUBSURBVFhHrZdbTJtlGMebbEQ3HJtz4DxcGu+80Du9
-        UVlMNPHOC7003puZuIPbZBMkolkwGuKiJiaaoQ7GulJ62DLi3NGNwZgyBy0Cbem5pbSl/TiU7u/zf3tw
-        g9J+HT7JL+/X933e5/n3+U7PZwBgENu4s9lqqTtsw6ZDVsFSNY80WbG9qc/EWAyo2/ICtjD5eq1/PILa
-        /UajxNvAoLpM9nGo5z+n9Y4GYBb6xoIVoZ9JoBne71GjbSyMTfuMPRJTnwjuFWtgGWkWRwB2RxB2Z6gy
-        4kd/mmG3Ec7onDq2jIaw6aDFL3FrGLysca9YUcDZ8RDOTYTRrwP60Z9m+MCIcGoRN/1x9Tsnos8nscuL
-        4F6xooD+f8L4bTKC8zqgH/1pFJDJZjE1q2EoL8Iup6P2UAUR3CvW8HBewPmpCC64orioA/pRCM2w+5Qa
-        KYKVcEZT6jcvzO1HbGHJUVqE+HAoCrgkQS+7Z3BFB/S7OBVV+97tHlbXASuh4HH+wuQtKjm2MdEqk3UO
-        RQFXPTP4YzqGazqhv3s2rfauZTy9zMFEq0zWORQFXJegA95Z3NAJfbnnmicniMfF3wKNsZmDiVaZrHMo
-        Chj0xdVFxKu5GrjnXgZ9swpaVQJuBROKP9dJIQ6tKgEjoaTi9jopxKFVJWA0Moc7Ake9jJWgsEarSgDv
-        X4fAsRLjwkQsDZc8fNxxDZ57cOfnaJs/VrdhBQEHcwImYgxamUnBk0grEf+rAJfc03pgkmh6AW//MgjD
-        XhMM+4Q9BXr/Y68ZNQcsqBURWw9bsaPZjqdazzglZ+7JuFKAN6FhWgf+uXmkljIwfHgaV4NZXPBl1P5y
-        dsm/jCF5cFKE5NzKxKsEBJLz8OsglFrA4vKy/MvTGA4vwdA6hngygW6TGV29FnSbrQp1LHNco89INMN3
-        A5PWM/EqAZH0orxMFhCW8pYjpi0hi7tKwEXvIja3OxGNxeGRnsA9I6cojzqWOa7R54p/qSAgd02sFJBY
-        yCAucCxHamlZ+fP82yY1NHRMIBSJo/OkGcd7LOjMo45ljmv0Oeuax2OflBKQvw1P/e3D6Tv+ipjHAupV
-        vGF/L0460njmOxf8gSjGvTNweGP3wTmu0cfo1LCjlIBCQ2Ia9Uu/F5BWi+3W2tidQekJItgoAn66ncIL
-        P7px/EYAbncYE6774RzX6NN5JyUXYRkBbEot0nBaJUk57NKKXXJHUfNRL77/K4lXT3jx8q9evPTzNF5c
-        Aee4Rp8fRuZQX06AqkBeRDls+QpQQMdwEm/2+PDGSS9e6/JiV55GSdh4YlrNcY0+x26tKSDXlvP8mgRW
-        ohx9UoXfpX3bKALaB5J4yxRA182gRMiqOMqkPcOyPB+yGXQNBZTPV4NrCHjQD5OHDpjRdj2Bd/pC8Pij
-        mPAnsOdQC/Y1tcIhvcVtqdKoXAceX0T5fDGQQEMpAU80W5Pq00wemTwdleDzvU56vW2HLfhsYA7vnY0i
-        FJ1FQN4BzW3taPn8S3hjGiaDs5gKxBCMxJRPm/iWEsCG8XmhUdhVBa8/3mLH0UEN+y8ncXdRw7KU/JuO
-        r/HtsQ5kMhlomiakkV1IK5+jQxp2yh7Ze58AvhgogpPV8OyTB7tHGJAPF1aw7sgZPNrSj20t57BFjmub
-        bAqu0Ye+T39qm8vvLwp4UKsTnhNeEUpVqBSsMquda9PXKYCf4hTBF8vK6pSDyaXqBsO/0hntMBdsa0gA
-        AAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAZdEVYdFNvZnR3YXJlAEFkb2JlIEltYWdlUmVhZHlxyWU8AAAG2ElEQVRYR71XSY9cVxWuRSKy
+        SRxCbAJZ4BgEkYiUOEI2EvGCsOEX5AegbFgAG8SCIZCIRAoKCxpw3IhYxD04SXuC2IZux2133F1dU1d1
+        dc3Tq/FVVdfUNbyahy/fuU4q3XRtjEwf6dO996vz7vnuefeed8tEe2B+fv7q+fPnwfZA8GmsqxJbBDws
+        RLvTgdFs/p9hqFZiSUyJLQIOiyqj2YIvEII/GEIgFGYruDuW/v3gZH5fIKhiSUyJLQKOyKBhtBAMRxCO
+        xrB8+7ZqQ5Gowv3kJIbE+lTAkV0CmsopqsVxe+Vj1co4HNMQjSdw+84aookkwsIL999+k56dwIkIiTVR
+        QFTToCUSWFm9o9pYPI5YKoX4dgEfb7oRL1eg5bcVpyWTe/2IeDKFO2tmJJLpMb97PplfMFFAs9XipCkk
+        UmmsmtdVG09lkCiUYP/py1j++heJR2H7ycuKS2T0sZ8glcoil61iwxZEIddEVq8oLpnOfD4f59eYRYk1
+        UcCd1TWs0Xl93QIz2zWLFeYtH5a/8RiwsUQsqr5wZott7Gc2W+CwevCzv5/Ed35rUpC+cOvr1rHfKrMj
+        MfYLmJvjzmwjxVWl9SzWrTakszmkt4vItLpY/tZhwHlDQfp6u4cMs6D89Bwy2W1Uil0VODNcU5C+cHqu
+        MJ5P5k8SEktijgXMcSCq0mkdGQqw8AGd713fqcP/3gxuMagEFtx6+ggCH8wiVzNgcTihZ/NMfQmNEnDi
+        dyboo3WFExTQKAP5fJnz2SlkmyLyaoHNdgsSc7+AbBZ6Pg/rxgZyjQYC8//Ayre/goTHDRt3b743QGhh
+        DreeegSh92dh9/mRL+2gUmrh0toUvvuqCScpQoH9y+YpVCsdOJxuCq4j8p/r0MtlNFmI5na/AhHQbnWQ
+        46q3SxU4/EGEucqVZ76KtNuFQqMJu8uNQqWKgtG++9uxQ7C9fRqNNnDBMoVTr5vgjzsR8ujo1AG/tqG4
+        i9Y/wxfSEfvgPJaffAixpX+j3e1PEEBVNpcLDlYv65kp3Dr6MKznzlJMAI7NTTj4m93phF369LGfOQ3r
+        sScw/aeX8MIfTFgyfwivJ4xNtxculweerbDi5LfpqZdgOfZl2E7/RWWt3evtF9Dp91Hi5oguzKvgkQvz
+        KDErRa66xPO/4XShxOwUiUq1iVYP+JsEf8OE9bm3YHBcqTXhZKZKlR2Uqw0YXajfxGf+nR+hSZ9y1UCn
+        SwF79gDVtAcjaFcWcPPJL8DGDJTbXaZ8B4ViiUHLdwVQSLlcg1Eb4LL9r/jemyZY5v+I1a99CdrCe6h0
+        B3B6fSjVG3y+p7i1o49j8e1XcOotvg7bFOrVLrr02ytAMjAYsIDwqKzchJv1ulKvcyVlBi2jXKkwtW7U
+        uKpWY4grfK/yfpft19EeAvGL72OZWdOuXIAnk0UNQOzyguISlxYQiufgTzlx8jUTrjmm0e+P9gvo8RXs
+        UHmVH4otrx873LWVnZpCtdaA1xtErwX8iyt/7jcmhNNuhIIJ1JtdMCGI//Milp8+jJs8qgI5ssJRL7yB
+        CFrNATQ9gFwxi8FguF9AnxnY2tpiIC98TKPX41Fjz5YHfl8Q8XAG55Z+j+OvmPDu4muIhZIIkBd/Lz+x
+        fhakm998fFywpC+clxvW5/OpOdW8W17GmiBgQAHykWg2O3wgoPp11gKDx27IzXNu6XU8z+BXN85g0IHy
+        83LihmEwC7xsMO03njoEOBYVpC9cg/XFQ5HiV2OGBQNme6+A2TmMmKoez7Ql/CG0UBqd1gBtbtsRd/L1
+        jWm18muuaQwluMHbEwV6uSKDNaJOGNzE7p//GDeOPqKwyb5wcvkY+zF4vW6oxc7Ozu4VIGYNX8MzvzRh
+        7qM31Vhs0XVWBZ+58QbAd93it0Fliivz+f2qbchVi3WEWwQB1nquA80RFLfHj1kQ38FwuFeADJQxwJL7
+        rCqjUstPMLCU1Y887yITL6LfG6Hd7qiq2el0EeT7lVbGwndY4ULhKLq9PgsbeeF2+bVabcWJTRQQjSZQ
+        yBgquD7kR4WQflFvIa6lEY5EEAyFFELhsBpLe6+c2EQBgz43Au34r01ID1aRIqQvpsXiPL999LpdBelH
+        OPG9cF3hWIbFJgqQ4yH2i5lTeO5XJjzL/fDqpR8qLsZ7oBzVLicQSD8Sjd47RyFikzMgArh5sqmiGu82
+        jQKG3DyyEoH0Y7HYPXNyAsQmChiNGJ0W5y14bHcpaLxMislEArH/hfssxkQBSd50dyPBm6zgfnNiewTI
+        BfGgbfel9PDMzExaCFF1EJBY/G/Y+EzAIeJZ4vvEDw4ILxLHiUcJ04OEiJA/iqLooMDgpgc/ARZ4EfOv
+        XGeIAAAAAElFTkSuQmCC
 </value>
   </data>
-  <data name="buttonOpenFile_MKA.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="buttonFiltre_MKA.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
-        dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAVUSURBVFhHxZd7bJNVGMaLl4BE8EJoYoxoookmYoyX
-        CQoKiERDDCj6L3ILyGVjYxsbbAMEFBI2b2yA1z+MuoCOcRekjBAdIkO3bmOXdi3dgN3YpbCVrffH5z1f
-        6brRdZ0s+ia/tD3nfOd5vvM957TVAfhfkbrj75xph405L6Nk+yTyUhgmQfo57pCMV1cNYY2SyeGtAZxV
-        QHf1zTgJ+43Zk8XyKO2yoauxcoci7iqZC2fJfLKgD+8B7SfwV9bzKP78xTArFJnA6h2mVtjV0ysDXeVw
-        li6Cs2wpnOXLeigjpUvga9zN1TDT6CBxmQDfBWWCWmFXTzNwvYSC78N5PpbE9WEF+2isbMkgWQxX2UIa
-        r+BKTBIDYzXJ3hUwcBau88vgqlhJ4sMg7UJcAO2zOyJxZBnnPkMDKj96TbJ30cBkoLMQrspYuKoSyKoB
-        cZsS4TEnwWtJjkASfJYEzl2Akmz1CCIZOAV3NV1XJ5KkiHjMyfBZU2D9+W2cy5pIXghPphDD8Mag+LOJ
-        DLCEMrilg6HUDHQUwG3mnXFyd81qeGpSbsaSwrtKhc+2Fhfy5sCaO5MhY9C6Kxniiv5hBno4zy1t6hVK
-        GuA5cO0YhZMpkgqvLQ2+WlInpPfCfzGD4u/Cuns2PBXLGbLFcBq5e4wLo2A+b2QDPG1/4tTWCUXUHhNi
-        4Ai81lT4a0VgDooyJwSWsC8TYd0zG97qBLgrGU7uEo1YuAfAxS3ub/wOzUXZyFk+Pp3a94YYOKDu2H5m
-        Kcw/vA44/uBj+Z0UhnCanIFHxCWMlRpu4mMbTPFkZXiYL3/VCuoUoGbvEjzz2D1PU3uEMlAsBq7mA5fX
-        48Led9BSmAS//QQDR+cqmPEaFHCbKG5iGE3MCvEQWBLhYjgHwmPbCrQdxbnt05qp+yC5rcdAx09Aw0YY
-        d06B07ZLLZXbzB3BQLoZwN6kBvEymKhLxBPbDkOXchK6ZAM53pvV0mbA41kn0HR6E75PfCqLuveLuBQf
-        wSvchnvQVZWCiq9f5bm/H56LmfBY15C0iPi5I3A5iQIn+e0aufIq7XhzUxbeirlvMnVHavI3DFzPRYNh
-        HuoNPLns++CtXcfdkEHktX9Ql8GVWw1dokGJHKxuxKEAB4iULjYP7V1u9V5M6Fbtz6fucE1eDGRP4X7N
-        RcW3M9Bt+QRo/gbeug1k44Dg0gccn8ZJjysBg+UKCqwaBkuzatMl5KPW3oWmTqf6fNTcitFpB4O/LfTG
-        nKnwt+5E6c6pDGMu/A2fwndpM/lwQFC/GWhZFzTwW10rCi+2KeS9lG7VPlRe6VAm7IGVuHvdkZ6DyLhj
-        GjrKM1B7cB6X/0f4GrbAV781KtC4hcneSJFf1cRFl9txrt6uOHupXbXN/PI0+/Ohiyd8HFIjM5QB9e2o
-        L901HbZDc2liEw18BVzZRjKjo4Vjr30UNFDWdE1RTowNV1VbuLornbuG2spA2Rev8duKOfDwR4eDBjp3
-        RI8jh98HHwdDaG51BDGRqpZOVCscCmmTGhFqoGTXjA4xIVko5o4YDKU8Q2w5z6kzQEqes43I6433Qdq1
-        NqkRaT0G5Dx+dsWsR+MWvfFI7GBZMGPc8lkxYxbp1pxSEzc5nGhk2vtD+qVCDdxJ5FR6iDz8LxhHxuvW
-        FqiJ7d0etDHp/SH9UqEGpIaR24mYGSyylx8YlnZMTdzt9cHh9vaL9EsN72PgVks/PP2ImjjaCt0FQ1H6
-        0et/CUwdXcl4uU67/NZrrD41t1AmlTuT5e0P6ZdxMl6u0y6/9ZIj9UkyhUyPAhkn44fsb54EUSaTO5Jl
-        HQgZJ+PD/lX7D0un+wcV4Qo0YCy50QAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAZdEVYdFNvZnR3YXJlAEFkb2JlIEltYWdlUmVhZHlxyWU8AAACUElEQVRYR8WVTWsTURiFWxSX
+        FoS69g90ERDSlQr+gnygxCYzySQlH5NY05qaahWSkBLaJra1SrRZ1R9QAq4q1g+6deEvOt4zmdFRXrOQ
+        6/WFh7mc95ybdybzMQPgvyKKJhFFk4iiSUTRJKJoElE0iSiaRBTD/FazS0v3Fm3b/pjNZhGGGnv0TKw/
+        S9o3QBTDhOqCbVtHrlvFaDTC6el7fPr8xYNrauzRQ+8kMilp3wBRDOPXRbXxuL66irMPZ3j9ZoSKW8Od
+        uykPrqmxR4/yjlTmxxDSvgGiGEbVbCwWu1mrVb0zbaxvwLJzyDkFOPllD66psUcPvfF4/AazOga4lMlk
+        zo+P36LV7qKwXESxVEG5Uv0FauzRQ69lWefM6hhgLpfL4eRk7P1QtbaC+yt1EfbooZcZZnUMMO84Dg5f
+        DfGgvoa1hw3F+h9oeB56mWFWxwBX8/k8tnf6eNR8gubG5lTooZcZZrUMUCjk8fRZS9H2j9OYeJjRNcB8
+        Op3+2ny8iU63h1Znayr00MsMszoGmItGo5lSqYje9q6ij63ejgh79NDLDLM6BuCjdC2ZTI5d18Xg+QEG
+        ey/QV8fdwb4H19TYo4deZvysuG+AKIZRxZfJZcVCIpF4VyqV0e50cXA4xMvhkQfX1Nijh14/o+VFxOJr
+        9YpiIRKJlFOp1Dc+Zo561j3Umhp79Pheba/ioLghz4qX9rriluK2D9fU2KNH+8coKF5S/q+8uXiH8zEj
+        XFNj7599jv+6pH0DRNEkomgSUTSJKJpEFE0iiiYRRXNg5jvjQysh+E/y/QAAAABJRU5ErkJggg==
 </value>
   </data>
+  <metadata name="toolTip_MKA.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>179, 18</value>
+  </metadata>
   <metadata name="openFileDialog_MKA.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
   <metadata name="saveFileDialog_MKA.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>303, 17</value>
+    <value>292, 17</value>
   </metadata>
 </root>
