--- a/Tyuiu.MedvedevKA.Sprint7.Project.V6/FormGuide.resx
+++ b/Tyuiu.MedvedevKA.Sprint7.Project.V6/FormGuide.resx
@@ -117,4 +117,24 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="textBoxGuide_MKA.Text" xml:space="preserve">
+    <value>Руководство:
+
+Встречает Вас вкладка "Главное меню" здесь находится четыре кнопки:
+
+Пациенты - открывает вкладку "Пациенты".
+Доктора - открывает вкладку "Доктора".
+О программе - открывает вкладку "О программе".
+Руководство -  открывает вкладку "Руководство".
+
+Во  вкладке "Пациенты" вы узнаете информацию о Пациентах.
+Имеет функции "Открыть файл", "Сохранить", "Удалить таблицу", "График", "Поиск", "Фильтрация".
+ 
+Во  вкладке "Доктора" вы узнаете информацию о Докторах.
+Имеет функции "Открыть файл", "Сохранить", "Удалить таблицу", "График", "Поиск", "Фильтрация" . 
+
+Во  вкладке "О программе" вы узнаете информацию о Разработчике.
+
+Во  вкладке "Руководство" вы узнаете информацию о работе программы.</value>
+  </data>
 </root>
