--- a/Tyuiu.MedvedevKA.Sprint7.Project.V6/FormPatients.resx
+++ b/Tyuiu.MedvedevKA.Sprint7.Project.V6/FormPatients.resx
@@ -248,6 +248,9 @@
   <metadata name="menuStrip_MKA.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>464, 17</value>
   </metadata>
+  <metadata name="menuStrip_MKA.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>464, 17</value>
+  </metadata>
   <metadata name="openFileDialog_MKA.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
