--- a/Tyuiu.MedvedevKA.Sprint7.Project.V6/FormGuide.resx
+++ b/Tyuiu.MedvedevKA.Sprint7.Project.V6/FormGuide.resx
@@ -117,4 +117,22 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="textBoxGuide_MKA.Text" xml:space="preserve">
+    <value>Главное меню:
+
+Встречает 4 конопки ведущие в другие окна:
+
+"Пациенты":
+в окне встречаюся функции "Открыть файл", "Удалить таблицу","Сохранить файл","График"
+"Фильтрация", "Поис", "Нахождение значений".
+
+"Доктора":
+в окне встречаюся функции "Открыть файл", "Удалить таблицу","Сохранить файл","График"
+"Фильтрация", "Поис", "Нахождение значений".
+"О программе"
+Предаставленна информация о программе.
+
+"Руководство"
+Написана информация о том какие функции имеет программа.</value>
+  </data>
 </root>
